--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -188,6 +188,8 @@
 <script defer="" src="assets/js/library.js"></script>
 <script defer="" src="assets/js/lazyload.js"></script>
 <script defer="" src="assets/js/lazy-patch.js"></script>
+<script defer src="assets/js/mobile-boot.js"></script>
+
 <!-- App entry last -->
 <script defer="" src="assets/app.js"></script>
 <script defer="" src="assets/js/mobile.js"></script>
