Fix for mobile slideshow

--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -211,5 +211,9 @@
 <div class="slideshow-stage">
 <img alt="slideshow image" id="slideshowImg"/>
 </div>
-</section></body>
+<div class="slideshow-quickbar" id="slideshowQuickbar">
+<button class="btn" id="ssQuickClose" title="Close">✕</button>
+<button class="btn" id="ssQuickPlay" title="Play">▶</button>
+<button class="btn" id="ssQuickPause" title="Pause">⏸</button>
+</div></section></body>
 </html>
