Improved slideshow UX

--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -117,7 +117,7 @@
 <button class="btn" id="detailAddImages">Add Images</button>
 <!-- Manual content rating control mounts here -->
 <div id="detailRating"></div>
-<button class="btn" id="detailFullscreen">Fullscreen</button><input class="num" id="slideshowSecs" max="120" min="2" step="1" type="number" value="5"/><button class="btn" id="detailSlideshow">Shuffle ▶</button></div>
+<button class="btn" id="detailSlideshow">Shuffle ▶</button></div>
 </div>
 <div class="detail-gallery">
 <div id="detailHero">
