Revert "Mobile wallpaper support"
This reverts commit 26471ff710dd4cb87679dcde6c5eea8991fca6fb.

--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -10,8 +10,7 @@
 <!-- JSZip (needed for zip import/export) -->
 <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
 <link href="assets/css/mobile.css" rel="stylesheet"/>
-<link href="assets/css/newprompt.css" rel="stylesheet"/>
-<link href="assets/css/variants.css" rel="stylesheet"/><meta content="#0b0e13" name="theme-color"/><meta content="yes" name="apple-mobile-web-app-capable"/><meta content="black-translucent" name="apple-mobile-web-app-status-bar-style"/><meta content="yes" name="mobile-web-app-capable"/><link href="assets/icons/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/><link href="assets/icons/icon-192.png" rel="icon" sizes="192x192" type="image/png"/><link href="assets/icons/icon-512.png" rel="icon" sizes="512x512" type="image/png"/><link href="assets/site.webmanifest" rel="manifest"/></head>
+<link href="assets/css/newprompt.css" rel="stylesheet"/><meta content="#0b0e13" name="theme-color"/><meta content="yes" name="apple-mobile-web-app-capable"/><meta content="black-translucent" name="apple-mobile-web-app-status-bar-style"/><meta content="yes" name="mobile-web-app-capable"/><link href="assets/icons/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/><link href="assets/icons/icon-192.png" rel="icon" sizes="192x192" type="image/png"/><link href="assets/icons/icon-512.png" rel="icon" sizes="512x512" type="image/png"/><link href="assets/site.webmanifest" rel="manifest"/></head>
 <body class="boot-gate">
 <!-- ========================== TOPBAR ========================== -->
 <header class="topbar">
@@ -216,5 +215,4 @@
 <div class="slideshow-stage">
   <img alt="slideshow image" id="slideshowImg"/>
 </div>
-  <script defer src="assets/js/variants.js"></script>
 </html>
