Work on image convertor

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     { "folder": "PasswordGenerator", "title": "Password", "desc": "Local Password Generator", "icon": "🔒" },
     { "folder": "Gallery", "title": "Gallery", "desc": "Gallery Viewer", "icon": "🖼️" },
     { "folder": "Minecraft", "title": "Minecraft", "desc": "Minecraft Server", "icon": "🌍" }
+    { "folder": "ImageConvertor", "title": "ImageConvertor", "desc": "ImageConvertor", "icon": "📸" }
   ]
   </script>
 
