--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     { "folder": "Gallery", "title": "Gallery", "desc": "Gallery Viewer", "icon": "🖼️" },
     { "folder": "Minecraft", "title": "Minecraft", "desc": "Minecraft Server", "icon": "🌍" },
     { "folder": "ImageConvertor", "title": "ImageConvertor", "desc": "ImageConvertor", "icon": "📸" }
+    { "folder": "GalleryBeta", "title": "GalleryBeta", "desc": "GalleryBeta", "icon": "🖼️" }
   ]
   </script>
 
