--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     { "folder": "PasswordGenerator", "title": "Password", "desc": "Local Password Generator", "icon": "🔒" },
     { "folder": "Gallery", "title": "Gallery", "desc": "Gallery Viewer", "icon": "🖼️" },
     { "folder": "Minecraft", "title": "Minecraft", "desc": "Minecraft Server", "icon": "🌍" },
-    { "folder": "ImageConvertor", "title": "ImageConvertor", "desc": "ImageConvertor", "icon": "📸" }
+    { "folder": "ImageConvertor", "title": "ImageConvertor", "desc": "ImageConvertor", "icon": "📸" },
     { "folder": "GalleryBeta", "title": "GalleryBeta", "desc": "GalleryBeta", "icon": "🖼️" }
   ]
   </script>
